--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/Nicasioc/requester/issues"
   },
-  "homepage": "https://github.com/Nicasioc/requester#readme"
+  "homepage": "https://github.com/Nicasioc/requester#readme",
+  "dependencies": {
+    "promise": "^7.1.1"
+  }
 }
